# spikes_detection_fcbg

./: .gitignore  .run_make_predictions.sh  README.md  __init__.py  config.ini  environment.yml  make_predictions.py  pyproject.toml  setup.py  spikes_detection  tmp.py
.github/workflows/: build.yml  code-style.yml  pytest.yml
epidetect/: config.ini  make_predictions.py
epidetect/preprocessing/: __init__.py  artefacts_removal.py  convert_to_raws.py  find_spikes.py  interpolate_bad_channels.py  load_raws.py  make_epochs.py  raws_transforms.py  resampling.py
epidetect/preprocessing/features_construction/: __init__.py  features_computation.py  features_functions.py
epidetect/sd_pipelines/: naive.py  svm_partial_fit.py  var1_abdt.py  var1_svm.py
epidetect/sd_pipelines/models/: var1_svm.joblib
epidetect/utils/: __init__.py  file_management.py  parse_configuration_file.py  postprocessing.py
preprocessing/: artefacts_removal.py  convert_to_raws.py  find_spikes.py  interpolate_bad_channels.py  load_raws.py  raws_transforms.py
preprocessing/features_construction/: features_computation.py  features_functions.py
sd_pipelines/: __init__.py  full_pipeline_svm.py  naive.py  svm_partial_fit.py  var1_abdt.py  var1_svm.py  var1_tkeo_svm.py
sd_pipelines/models/: full_pipeline_svm.joblib  naive.joblib  pca1.joblib  tkeo_pca1.joblib  var1_abdt.joblib  var1_abdt_.joblib  var1_svm.joblib  var1_svm_.joblib  var1_tkeo_svm.joblib
utils/: __init__.py  file_management.py  logger.py  parse_configuration_file.py  postprocessing.py
